refator tela de login

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -8,9 +8,9 @@
   <div class="card">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="field">
-        <label for="username">E-mail </label>
+        <label for="username">Usuário </label>
         <div class="input-wrapper">
-          <span class="leading-icon" aria-hidden="true">✉️</span>
+          <span class="leading-icon" aria-hidden="true"></span>
           <input
             id="username"
             type="text"
@@ -23,7 +23,7 @@
       <div class="field">
         <label for="senha">Senha</label>
         <div class="input-wrapper">
-          <span class="leading-icon" aria-hidden="true">🔒</span>
+          <span class="leading-icon" aria-hidden="true"></span>
           <input
             id="senha"
             type="password"
@@ -43,7 +43,7 @@
     </form>
 
     <div class="extras">
-      <div class="secure">🛡️ Ambiente Seguro SSL</div>
+      <div class="secure">🛡️ Ambiente Seguro </div>
     </div>
   </div>
 
