--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -32,10 +32,9 @@
 
   <section class="quick">
     <a class="qcard" *ngIf="isAdmin()" routerLink="/admin">Painel de Controle</a>
-    <a class="qcard" routerLink="/receitas">Receita</a>
-    <a class="qcard" routerLink="/despesas">Despesa</a>
-    <a class="qcard" routerLink="/relatorios">Relatórios</a>
-    <a class="qcard" routerLink="/metas">Metas</a>
+    <a class="qcard" routerLink="/receitas">Receitas</a>
+    <a class="qcard" routerLink="/despesas">Despesas</a>
+    <a class="qcard" routerLink="/investimentos">Investimentos</a>
   </section>
 
   <section class="ad">
