--- a/src/app/features/metas/metas.component.html
+++ b/src/app/features/metas/metas.component.html
@@ -1,11 +1,11 @@
 <div class="page">
   <header class="header">
-    <div>
-      <p class="muted">Metas e objetivos financeiros</p>
-    </div>
+    <a routerLink="/investimentos" class="back-btn">
+      <i class="pi pi-arrow-left"></i>
+      <span>Voltar</span>
+    </a>
     <div class="summary">
       <div class="chip">Itens: {{ itens.length }}</div>
-      <a class="secondary link" routerLink="/dashboard">Voltar ao Dashboard</a>
     </div>
   </header>
 
