feat(dashboard): add reports link to navigation menu

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -35,6 +35,7 @@
     <a class="qcard" routerLink="/receitas">Receitas</a>
     <a class="qcard" routerLink="/despesas">Despesas</a>
     <a class="qcard" routerLink="/investimentos">Investimentos</a>
+    <a class="qcard" routerLink="/relatorios">Relatórios</a>
   </section>
 
   <section class="ad">
